  - Controlled by config option remove_city_improvement_limit
- Option to show unit hitpoints on the stealth attack target selection popup (named show_hp_of_stealth_attack_options in config)
- Option to have a warning when the building you've selected to build would replace another already built in the city
  - Named warn_when_chosen_building_would_replace_another in config, off by default
- Stop barbarian spawns from bankrupting the barbarian player (matters only if barbs are allowed to capture cities)
- Option stopping pollution of impassable tiles also covers volcanic eruptions
- Make barbarians defend cities they've captured as if they were camps
- Load a third config file, custom.c3x_config.ini, if present
- Fix describe_states_of_units_on_menu setting being ignored
- Stop units from airdropping multiple times in one turn
  - This only matters when dont_end_units_turn_after_airdrop has been activated
- Do not group together units with different names on right-click menu
- Record which units have used extra defensive bombards in save files
- Touch up action descriptions for auto precision striking and fortified exhausted units
- Correct description of lethal zone of control setting in default config

* RELEASE 19
- Option to stop pollution from appearing on impassable tiles
- Rework UnitRCMIcons.pcx so busy & combat units can be given special icons
- Fix bombers not doing stack bombard and not showing as attack-capable on right-click menu
- Fix crash when opening right-click menu with fleeing automated workers
- Fix lethal ZoC setting allowing coastal fortresses to knock the last hit point off passing units
- Fix dont_escort_unflagged_units option interfering with group movement of units
- Put right-click menu sword icon on non-empty armies
- Describe the action of passenger units as "Transported" instead of "Fortified"
- Describe the action of units waiting to fortify as "Fortified" instead of leaving it unreplaced

* RELEASE 18B