@@ -541,3 +541,6 @@ do_not_pollute_impassable_tiles = false
 
 ; Includes the hitpoints of each possible target on the stealth attack selection popup. This makes it easier to pick out weakened units.
 show_hp_of_stealth_attack_options = false
+
+; Stops invisible units from being targeted by stealth attacks. They can still be targeted if they've been revealed by the attacking civ.
+exclude_invisible_units_from_stealth_attack = false
